# purplebee

./: .gitignore  Makefile.am  NEWS  README.md  Rules.am  TODO  autogen  ccfilt  configure.ac  configure.jml  suppressions
doc/: architecture.pod  bumblebee.txt
extra/web/: purplebee.pod
include/: PurpleBee.h  Rules.am
include/PurpleBee/: Callback.h  Closure.h  marshal.h  stash.h  types.h
include/backend/: PurpleBee.h  Rules.am
include/backend/PurpleBee/: Closure.h  callbacks.h  make_closure.h  make_closure_each.h  marshal.h  operation.h  operation_invoke.h  perl_call.h  types.h
include/backend/uiops/: account.h  blist.h  connection.h  conversation.h  core.h  debug.h  dnsquery.h  eventloop.h  idle.h  notify.h  privacy.h  request.h  roomlist.h  sound.h  whiteboard.h  xfer.h
include/common/: Rules.am
include/common/debug/: Rules.am  backtrace.h  dout.h  signal.h  trace.h
include/common/perl/: Rules.am  call.h  call.tcc  closure.h  closure_fwd.h  interpreter.h  make_closure.h  make_closure_each.h  marshal.h  operation.h  operation_invoke.h  output.h  util.h
include/common/util/: Rules.am  auto_free.h  closure.h  common.h  force_assign.h  funcall.h  init_error.h  invoke_closure.h  make_closure.h  make_closure_each.h  output.h  phoenix.h  preprocessor.h  string.h  unimplemented.h  va_list.h  va_list_unpack.h  va_list_unpack0.h  va_list_unpackN.h  xassert.h
include/common/util/type_traits/: Rules.am  identity.h  int_pack.h  nth_type.h  return_type.h
include/debug/: backtrace.h  dout.h  purple.h  signal.h
include/perl/: call.h  call.tcc  callback.h  closure.h  eval_error.h  interpreter.h  object.h  package.h  util.h
include/uiops/: account.h  blist.h  connection.h  conversation.h  core.h  debug.h  dnsquery.h  eventloop.h  idle.h  notify.h  privacy.h  request.h  roomlist.h  sound.h  whiteboard.h  xfer.h
include/util/: array_size.h  callback.h  closure.h  common.h  funcall.h  identity.h  init_error.h  initialisation_error.h  make_closure.h  output.h  placeholder.h  string.h  unimplemented.h  wrapper.h  xassert.h
include/util/type_traits/: decay_array.h  placeholder.h  wrapper.h
src/: Rules.am
src/PurpleBee/: PurpleBee.pm  PurpleBee.xs  Rules.am  faults.cpp  glue.cpp  stash.cpp  typemap  va_listise.cpp
src/PurpleBee/PurpleBee/: Account.xs  AccountOption.xs  Accounts.xs  Buddy.xs  BuddyIcon.xs  BuddyIcons.xs  BuddyList.xs  Callback.xs  Certificate.xs  Chat.xs  Cipher.xs  Ciphers.xs  Closure.xs  Cmd.xs  Cmds.xs  Connection.xs  Connections.xs  Contact.xs  Conversation.xs  Conversations.xs  Core.xs  Debug.xs  DnsQuery.xs  EventLoop.xs  Group.xs  Idle.xs  Log.xs  NTLM.xs  Network.xs  Notify.xs  Pounce.xs  Pounces.xs  Prefs.xs  Presence.xs  Privacy.xs  Proxy.xs  Request.xs  Roomlist.xs  SavedStatus.xs  SavedStatuses.xs  (+21 more)
src/PurpleBee/PurpleBee/Account/: Option.xs  UserSplit.xs
src/PurpleBee/PurpleBee/Buddy/: Icon.xs  Icons.xs  List.xs
src/PurpleBee/PurpleBee/Conversation/: Chat.xs  Im.xs
src/PurpleBee/PurpleBee/Mime/: Document.xs  Part.xs
src/PurpleBee/PurpleBee/Ops/: Account.pm  Blist.pm  Connection.pm  Conversation.pm  Core.pm  Debug.pm  DnsQuery.pm  EventLoop.pm  Idle.pm  Notify.pm  Privacy.pm  Request.pm  Roomlist.pm  Sound.pm  Whiteboard.pm  Xfer.pm
src/PurpleBee/PurpleBee/Request/: Field.xs  Fields.xs
src/PurpleBee/PurpleBee/Roomlist/: Field.xs  Room.xs
src/PurpleBee/PurpleBee/Sound/: Theme.xs
src/PurpleBee/PurpleBee/Ssl/: Connection.xs
src/PurpleBee/PurpleBee/Status/: Attr.xs  Primitive.xs  Type.xs
src/PurpleBee/PurpleBee/UiOps/: Account.pm  Blist.pm  Connection.pm  Conversation.pm  Core.pm  Debug.pm  DnsQuery.pm  EventLoop.pm  Idle.pm  Notify.pm  Privacy.pm  Request.pm  Roomlist.pm  Sound.pm  Whiteboard.pm  Xfer.pm
src/PurpleBee/PurpleBee/wip/: account.h  accountopt.h  blist.h  buddyicon.h  certificate.h  cipher.h  cmds.h  connection.h  conversation.h  core.h  debug.h  dnsquery.h  dnssrv.h  eventloop.h  ft.h  idle.h  imgstore.h  log.h  mime.h  network.h  notify.h  ntlm.h  pounce.h  prefs.h  privacy.h  proxy.h  request.h  roomlist.h  savedstatuses.h  smiley.h  (+8 more)
src/PurpleBee/marshal/: Rules.am  c.cpp  glib.cpp  numeric.cpp  purple.cpp  purplebee.cpp
src/PurpleBee/uiops/: account.cpp  blist.cpp  connection.cpp  conversation.cpp  core.cpp  debug.cpp  dnsquery.cpp  eventloop.cpp  idle.cpp  notify.cpp  privacy.cpp  request.cpp  roomlist.cpp  sound.cpp  whiteboard.cpp  xfer.cpp
src/backend/: Rules.am
src/backend/PurpleBee/: PurpleBee.pm  PurpleBee.xs  Rules.am  faults.cpp  glue.cpp  stash.cpp  typemap  va_listise.cpp
src/backend/server/: Rules.am  arguments.cpp  arguments.h  main.cpp
src/common/: Rules.am
src/common/debug/: Rules.am  backtrace.cpp  backtrace_frontend.cpp  backtrace_symbols.cpp  dout.cpp  fork_abort.cpp  fork_trace.cpp  ptrace.cpp  signal.cpp
src/common/perlsup/: Rules.am  interpreter.cpp  object.cpp  operation.cpp  output.cpp  vtable.cpp
src/common/util/: Rules.am  unimplemented.cpp  xassert.cpp
src/debug/: Rules.am  backtrace.cpp  backtrace_symbols.cpp  dout.cpp  signal.cpp
src/perlsup/: PurpleBee.xs  Rules.am  call.cpp  interpreter.cpp  object.cpp
src/server/: Rules.am  main.cpp
src/util/: Rules.am  unimplemented.cpp  xassert.cpp
wip/headers/: account.h  accountopt.h  blist.h  buddyicon.h  certificate.h  cipher.h  cmds.h  connection.h  conversation.h  core.h  debug.h  dnsquery.h  dnssrv.h  eventloop.h  ft.h  idle.h  imgstore.h  log.h  mime.h  network.h  notify.h  ntlm.h  pounce.h  privacy.h  proxy.h  request.h  roomlist.h  savedstatuses.h  smiley.h  sound-theme.h  sound.h  sslconn.h  status.h  stringref.h  stun.h  upnp.h  util.h  value.h  version.h  whiteboard.h
wip/headers/pp/: account.h  accountopt.h  blist.h  buddyicon.h  certificate.h  cipher.h  cmds.h  connection.h  conversation.h  core.h  debug.h  dnsquery.h  dnssrv.h  eventloop.h  ft.h  idle.h  imgstore.h  log.h  mime.h  network.h  notify.h  ntlm.h  pounce.h  prefs.h  privacy.h  proxy.h  request.h  roomlist.h  savedstatuses.h  smiley.h  sound-theme.h  sound.h  sslconn.h  status.h  stringref.h  stun.h  upnp.h  util.h  value.h  version.h  (+1 more)
(+140 files in other folders)
