AUTOMAKE_OPTIONS	= -Wall
ACLOCAL_AMFLAGS		= -I m4

lib_LTLIBRARIES		= # empty
bin_PROGRAMS		= # empty

BUILT_SOURCES		= # empty

EXTRA_DIST		= # empty

CLEANFILES		= # empty
DISTCLEANFILES		= # empty
MAINTAINERCLEANFILES	= # empty

OPTFLAGS		= -pipe -O3 -fno-builtin
WARNINGS		= # empty
#WARNINGS		+= -Wall -Wextra
#WARNINGS		+= -Wno-unused-parameter
#WARNINGS		+= -Wpadded
#WARNINGS		+= -Wpacked
#WARNINGS		+= -Wconversion
#WARNINGS		+= -Wstrict-overflow=5
#WARNINGS		+= -Wstrict-aliasing=1
#WARNINGS		+= -Werror

AM_CFLAGS		= $(OPTFLAGS) $(WARNINGS)
AM_CXXFLAGS		= $(OPTFLAGS) $(WARNINGS)

-include prepare
prepare:	
